syntax = "proto3";

package order;

option go_package = "trabalho-03/proto";

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
}

message Order {
  uint32 id = 1;
  string customer_id = 2;
  double amount = 3;
  string status = 4;
  string created_at = 5;
  string updated_at = 6;
}

message CreateOrderRequest {
  string customer_id = 1;
  double amount = 2;
  string status = 3;
}

message CreateOrderResponse {
  Order order = 1;
}

message ListOrdersRequest {}

message ListOrdersResponse {
  repeated Order orders = 1;
}
